Update index.html with Flores, Petén information
Replaced content in index.html to describe Flores, Petén.

--- a/index.html
+++ b/index.html
@@ -1,29 +1,21 @@
 <!DOCTYPE html>
-<html lang="en-US">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Norlin Montenegro | WDD 130</title>
-  </head>
-  <body>
-    <header>
-      <nav>
-        <a href="#">Home</a>
-        <a href="wwr/">Rafting Website</a>
-      </nav>
-    </header>
-
-    <main>
-      <h1>Norlin Montenegro | WDD 130</h1>
-      <img src="images/VISA .....jpg" alt="Hello, my name is Norlin Montenegro" width="200">
-      <p>Hello! My name is Norlin Montenegro. I am currently living in Guatemala City, Guatemala.
-         I studied Business Administration and Economics and I am now learning Software Development.
-         I enjoy technology, business ideas, and working on new projects that challenge me. 
-         In my free time, I like reading, learning new skills, and spending time outdoors.</p>
-    </main>
-
-    <footer>
-      <p>&copy; 2025 🌟 Norlin Montenegro 🌟 Guatemala City, Guatemala</p>
-    </footer>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Flores, Petén</title>
+</head>
+<body>
+  <h1>Flores, Petén</h1>
+  <p>
+    Flores is a picturesque island town located in northern Guatemala, in the department of Petén. 
+    It sits on Lake Petén Itzá and is connected to the mainland by a short causeway. 
+    The town is famous for its colorful houses, cobblestone streets, and relaxed atmosphere.
+  </p>
+  <p>
+    Many travelers visit Flores as a gateway to the ancient Mayan ruins of Tikal, but the town itself 
+    is full of charm. You can enjoy beautiful sunsets by the lake, local cuisine, and boat rides around the island.
+  </p>
+  <img src="https://upload.wikimedia.org/wikipedia/commons/3/35/Flores_Peten_Guatemala.jpg" alt="Flores Petén, Guatemala view">
+</body>
 </html>
